# openKB

./: .gitignore  Makefile  Makefile.in  autogen.sh  configure.ac
data/fmt/: kbtw.ccl
data/free/: COPYING  colors.ini  credits.txt  land.tmx  signs.txt  ui.ini
docs/: netkb.man  openkb.man
src/: COPYING  bounty.c  bounty.h  combat.c  env-sdl.c  env.h  font.h  game.c  inprint.c  main.c  play.c  play.h  rogue.c  rogue.h  save.c  save.h  ui.c  ui.h
src/lib/: dos-cc.c  dos-cc.h  dos-data.c  dos-exe.c  dos-img.c  dos-snd.c  dos-snd.h  free-data.c  kbauto.c  kbauto.h  kbconf.c  kbconf.h  kbdir.c  kbdir.h  kbdos.c  kbdos.h  kbfile.c  kbfile.h  kbres.c  kbres.h  kbsound.h  kbstd.c  kbstd.h  kbsys.h  md-rom.c
src/tools/: Makefile  kbcc.c  kbcc2.c  kbimg2dos.c  kbmaped.c  kbrowse.c  kbtmx.py  kbview.c  modding.c  unexecomp.c  unexepack.c
